# historia-core

./: Cargo.toml  README.md  package-lock.json  package.json  test.json  test_ts.ts
src/: enums.rs  lib.rs  models.rs  neon.rs  parser.rs  process.rs
src/consts/: regex.rs
src/enums/: languages.rs  sort.rs
src/models/: event.rs  event_date.rs  meta.rs  parser_options.rs  raw_string.rs
src/neon/: neon_main.rs
src/parsers/: event_string_to_event.rs  mod.rs  raw_to_event_string.rs  text_to_events.rs
src/post_processors/: complete_fields.rs  link_years_and_months.rs  mod.rs  post_process.rs  sort.rs
src/tests/: cultural-revolution-article.json  cultural-revolution-article.txt  default_options.rs  historia_test.rs  mod.rs  parser_test.rs  sample_long_text_chinese.rs  sample_texts.rs
src/utils/: mod.rs  write_file.rs
ts_models/: event.ts
