[package]
name = "historia-core"
version = "0.0.2"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
ts-rs = {version = "4.0.0", features = ["chrono-impl"]}

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

[dev-dependencies]
test-case = "1.2.0"
